<resources>


    <!-- ////////////   MATERIAL DRAWER   \\\\\\\\\\\\\ -->

    <!-- Drawer Items -->
    <string name="app_places">Places</string>
    <string name="app_favorite">Favorites</string>
    <string name="app_about">About</string>
    <string name="app_support">Support</string>
    <string name="app_settings">Settings</string>
    <string name="app_wrong">Sorry, you are lost</string>

    <!-- Filter Drawer Items -->
    <string name="sight">Sight</string>
    <string name="sight_city">City</string>
    <string name="sight_country">Country</string>
    <string name="sight_national_park">National Park</string>
    <string name="sight_park">Park</string>

    <string name="continent">Continent</string>
    <string name="continentAfrica">Africa</string>
    <string name="continentAntarctica">Antarctica</string>
    <string name="continentAsia">Asia</string>
    <string name="continentAustralia">Australia</string>
    <string name="continentEurope">Europe</string>
    <string name="continentNorthAmerica">North America</string>
    <string name="continentSouthAmerica">South America</string>

    <string name="filter_wrong">All</string>


    <!-- Header Images (URLs) -->
    <string-array name="headerUrl">
        <item>http://i.huffpost.com/gen/2344590/original.jpg</item>
        <item>http://amazingplanetnews.com/wp-content/uploads/2014/03/amazing-place-cinque-terre-italy.jpg</item>
        <item>http://bit.ly/22imQ36</item>
        <item>http://bit.ly/1MkEy4n</item>
        <item>http://bit.ly/22inspy</item>
        <item>http://bit.ly/1SVhloC</item>
        <item>http://bit.ly/1SkeYsv</item>
        <item>http://bit.ly/1NBAeJ4</item>
        <item>http://bit.ly/1YHiphC</item>
    </string-array>


    <!-- ////////////  Toolbar   \\\\\\\\\\\\\ -->

    <!--  Toolbar Texts -->
    <string name="action_download">Download</string>
    <string name="action_share">Share</string>
    <string name="action_launch">Launch</string>
    <string name="action_changelog">Changelog</string>
    <string name="action_filter">Filter</string>
    <string name="action_search">Search</string>
    <string name="action_sort">Sort</string>
    <string name="action_column">Columns</string>
    <string name="action_direction">Swipe Direction</string>


    <!-- ////////////  Snack Bars   \\\\\\\\\\\\\ -->

    <!-- Download Image -->
    <string name="snackbarDownloadImageText">Layout was saved in the folder \"Places\".</string>
    <string name="snackbarDownloadImageAction">Open</string>
    <string name="snackbarDownloadImageIntent">Open folder with</string>

    <!-- Download Layout -->
    <string name="snackbarDownloadLayoutText">Image was saved in the folder \"Places\".</string>
    <string name="snackbarDownloadLayoutAction">Open</string>
    <string name="snackbarDownloadLayoutIntent">Open folder with</string>

    <!-- Download Layout -->
    <string name="snackbarFavoredText">Place added to your favorites.</string>


    <!-- ////////////   PERMISSION DIALOGS   \\\\\\\\\\\\\ -->
    <string name="storageContent">
        Following features need access to your storage in order to work:
         \n
         \n • Download images
         \n • Download this page with all info
    </string>
    <string name="storagePositive">Allow</string>
    <string name="storageNegative">No</string>


    <!-- ////////////   DIALOGS   \\\\\\\\\\\\\ -->

    <!-- Filter Dialog -->
    <string name="filterTitle">Filter by</string>
    <string name="filterPositive">Apply Changes</string>
    <array name="filterContentArray">
        <item>Sight</item>
        <item>Country</item>
    </array>

    <!-- Sight Dialog -->
    <string name="sightTitle">Sight</string>
    <string name="categoryPositive">Apply Changes</string>
    <array name="sightContentArray">
        <item>City</item>
        <item>Country</item>
        <item>National Park</item>
        <item>Landscape</item>
    </array>

    <!-- Columns Dialog -->
    <string name="columnsTitle">Amount Of Columns</string>
    <array name="columnsArray">
        <item>1 column (recommended)</item>
        <item>2 columns</item>
        <item>3 columns</item>
    </array>

    <!-- Filter Dialog -->
    <string name="saveImageTitle">What do you want to save?</string>
    <array name="saveImageContentArray">
        <item>Image</item>
        <item>Page as Image</item>
    </array>


    <!-- ////////////   APP SECTIONS   \\\\\\\\\\\\\ -->

    <!-- Places -->
    <string name="json_file_url">https://drive.google.com/uc?id=0B6ky9fzTGl9XNFBhTTlxU2hhQmM</string>
    <string name="title_activity_detailed_places">Places Viewer</string>

    <!-- Submit -->
    <string name="drawer_submit_info">A beautiful place is missing? Submit it. I will look after it if I can add it.</string>

    <!-- About -->
    <string name="appName">Places</string>
    <string name="appDescription">

        Places was created to help people to spot the most unique places on our earth. Places which you have to see in your life time.
        Favor your personal most interesting places - and swear to yourself to visit them in your life time.
        \n \n
        Places sets in addition focus on nature conservation. You receive information about how to support our earth - for example against Global Warming. The most active environmental activist are honored in this app, check them out and read their motivations.

    </string>


    <string name="developer">Maximilian Keppeler</string>
    <string name="developer_desc">Maximilian Keppeler</string>


    <!--TODO -->

    <array name="profileImage">
        <item>21</item>
        <item>42</item>
        <item>42</item>
    </array>


    <array name="profileName">
        <item>Maximilian Keppeler</item>
        <item>adas</item>
        <item>asdads</item>
    </array>


    <array name="profileDescription">
        <item>Bla Bla Bla</item>
        <item>adsdsa</item>
        <item>ads</item>
    </array>


    <!-- Support -->
    <string name="supportText">Read the FAQs before you contact us.</string>

    <string name="liveChatTitle">Live Chat</string>
    <string name="liveChatDesc">Get fast and very convenient replies to your questions. Whatever question you have regarding Places, we will answer it. You have ideas how we could improve Places? Let us know.</string>

    <string name="mailTitle">E-Mail</string>
    <string name="mailDesc">Write a mail to us and we will reply as soon as possible. If you have longer content of your purpose to contact us, write us a mail instead of using the live chat.</string>


    <!-- Other App Strings -->
    <string name="app_name">Places</string>
    <string name="no_internet">No Internet Connection</string>
    <string name="send_to" />
    <string name="walls_save_location" />
    <string name="ok" />
    <string name="permission_storage_rationale">Storage permissions are needed to demonstrate access.</string>
    <string name="permision_available_storage">Storage permissions are needed to demonstrate access.</string>
    <string name="permissions_not_granted">Storage permissions are needed to demonstrate access.</string>
    <string name="title_activity_live_chat">LiveChat</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_image_view">ImageView</string>


</resources>
