<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        style="@style/LinearLayoutForViews"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/supportText"
            style="@style/TextViewBody1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="16dp"
            android:text="@string/supportText"
            android:textAlignment="center"
            android:textColor="@color/colorAccent" />

        <android.support.v7.widget.CardView
            android:id="@+id/liveChatCardView"
            style="@style/Card"
            android:layout_marginTop="4dp"
            android:focusableInTouchMode="true"
            app:cardUseCompatPadding="true">

            <com.balysv.materialripple.MaterialRippleLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/rippleLiveChat"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:mrl_rippleColor="@color/md_white_1000"
                app:mrl_rippleDuration="450"
                app:mrl_rippleFadeDuration="475"
                app:mrl_rippleHover="true"
                app:mrl_rippleOverlay="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:background="@color/md_blue_grey_100" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingBottom="16dp"
                        android:paddingLeft="16dp"
                        android:paddingRight="16dp"
                        android:paddingTop="24dp">

                        <TextView
                            android:id="@+id/liveChatTitle"
                            style="@style/TextViewTitle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawablePadding="16dp"
                            android:drawableStart="@drawable/ic_mail"
                            android:text="@string/liveChatTitle"
                            android:textColor="@color/white" />

                        <TextView
                            android:id="@+id/liveChatDesc"
                            style="@style/TextViewBody1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:text="@string/liveChatDesc"
                            android:textColor="@color/primaryText" />

                    </LinearLayout>

                </LinearLayout>
            </com.balysv.materialripple.MaterialRippleLayout>

        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView
            android:id="@+id/mailCardView"
            style="@style/Card"
            android:layout_marginTop="4dp"
            android:focusableInTouchMode="true"
            app:cardUseCompatPadding="true">


            <com.balysv.materialripple.MaterialRippleLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/rippleMail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:mrl_rippleColor="@color/md_white_1000"
                app:mrl_rippleDuration="450"
                app:mrl_rippleFadeDuration="475"
                app:mrl_rippleHover="true"
                app:mrl_rippleOverlay="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:background="@color/md_blue_grey_100" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingBottom="16dp"
                        android:paddingLeft="16dp"
                        android:paddingRight="16dp"
                        android:paddingTop="24dp">

                        <TextView
                            android:id="@+id/mailTitle"
                            style="@style/TextViewTitle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawablePadding="16dp"
                            android:drawableStart="@drawable/ic_chat"
                            android:text="@string/mailTitle"
                            android:textColor="@color/white" />


                        <TextView
                            android:id="@+id/mailDesc"
                            style="@style/TextViewBody1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:text="@string/mailDesc"
                            android:textColor="@color/primaryText" />


                    </LinearLayout>

                </LinearLayout>

            </com.balysv.materialripple.MaterialRippleLayout>

        </android.support.v7.widget.CardView>


    </LinearLayout>

</ScrollView>